# EASy68K

./: .gitignore  CMakeLists.txt  Instructions.txt  README.md
.github/workflows/: main.yml
sim68k/: CMakeLists.txt
sim68k/resources/: mainWindow.glade  mainWindow.glade~
sim68k/src/: BPoint.h  BPointExpr.cpp  BPointExpr.h  BREAKPOINTSu.cpp  LogfileDialogu.h  Memory1.h  SIM68Ku.cpp  SIM68Ku.h  aboutS.h  code1.cpp  code2.cpp  code3.cpp  code4.cpp  code5.cpp  code6.cpp  code7.cpp  code8.cpp  code9.cpp  def.h  extern.h  findDialogS.h  hardwareu.cpp  logU.cpp  logU.h  net.h  opcodes.h  proto.h  run.cpp  sim68k.cpp  simIOu.h  stack1.h  startsim.cpp  utils.cpp  var.h
sim68k/wrappers/: Actions.hpp  ActnList.hpp  Buttons.hpp  Classes.hpp  ComCtrls.hpp  Controls.hpp  Dialogs.hpp  ExtCtrls.hpp  Forms.hpp  Graphics.hpp  Grids.hpp  ImageList.hpp  ImgList.hpp  MPlayer.hpp  Mask.hpp  Menus.hpp  NMURL.hpp  Presentation.hpp  StdCtrls.hpp  ToolWin.hpp  sysobj.h
